<resources>
    <string name="app_name">Sign Up Login Firebase</string>

    <string name="healthy_subtext">incl. Benefits, Recipes, Calories and more</string>
    <string name="healthyHeader">Healthy Food</string>
    <string name="unhealthy_header">Unhealthy \nFood</string>
    <string name="unhealthy_subtext">incl. Alternatives, Calories and more</string>
    <string name="saved_header">Saved Food</string>
    <string name="saved_subtext">All your food saves in one place</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="bmi_header">BMI \nCalculator</string>
    <string name="offline_string"> <u>Proceed in offline mode</u></string>
    <string name="food_benefit_dialog">Food Benefits</string>

    <string-array name="food_benefits">
        <item>All</item>
        <item>Heart</item>
        <item>Bones</item>
        <item>Lungs</item>
        <item>Stomach</item>
        <item>Blood</item>
    </string-array>

    <string-array name="food_disbenefits">
        <item>All</item>
        <item>Heart</item>
        <item>Liver</item>
        <item>Obesity</item>
        <item>Kidney</item>
        <item>Diabetes</item>
        <item>Diarrhea</item>
    </string-array>

    <string-array name="diseaseOptions">
        <item>Heart Disease/Problem</item>
        <item>Liver Problem</item>
        <item>Lung Disease</item>
        <item>Diabetes</item>
        <item>Blood related sickness</item>
        <item>Kidney Disease</item>
        <item>Other</item>
    </string-array>

</resources>