<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/visby_heavy"
                android:padding="12dp"
                android:text="Categories"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/button_to_profile"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/user"
                android:padding="16dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="360dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:id="@+id/button_healthyFood"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/category_btn_lime">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/visby_extra_bold"
                    android:padding="25dp"
                    android:text="@string/healthyHeader"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00FFFFFF"
                    android:padding="20dp"
                    android:text="@string/healthy_subtext"
                    />


            </RelativeLayout>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:src="@drawable/healthyicon1"
                android:layout_marginTop="-30dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_unhealthyFood"
            android:layout_width="321dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:background="@drawable/category_btn_red">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/chicharon_png"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/visby_extra_bold"
                android:padding="23dp"
                android:text="@string/unhealthy_header"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white_smoke"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-1dp"
                android:background="#00FFFFFF"
                android:padding="20dp"
                android:text="@string/unhealthy_subtext"
                android:textColor="@color/white_smoke" />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="360dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp">

            <RelativeLayout
                android:id="@+id/button_bmiCalculator"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_bk2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/visby_extra_bold"
                    android:padding="25dp"
                    android:text="@string/bmi_header"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00FFFFFF"
                    android:padding="20dp"
                    android:text="Calculate and See your BMI!"
                    android:textColor="@color/dim_gray"/>


            </RelativeLayout>

            <ImageView
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_calories"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>